# bluetooth-serial-port-async

./: Cargo.toml  Cargo.toml.orig  README.md
examples/: async_std.rs  example.rs  tokio.rs
examples/async_std/: Cargo.toml  async_std.rs
examples/tokio/: Cargo.toml  tokio.rs
src/: bluetooth.rs  lib.rs
src/linux/: sdp.rs  socket.rs
