[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
bluetooth-serial-port-async = { version = "*", path = "../../", features = ["tokio"], default-features = false }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "tokio"
path = "tokio.rs"